# MQTT_Qt_Arduino_UNO_R4_WiFi

./: README.md
Arduino_UNO_R4_WiFi_MQTT_Publisher/: R4_MQTT.ino  config.h
Qt_MQTT_Subscriber/: CMakeLists.txt  Subscriber.h  main.cpp
